--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE resources [
+    <!ENTITY apiKey "&amp;apikey=hoArfRosT1215">
+]>
 <resources>
     <string name="app_name">Weather App</string>
 
     <!--Weather API-->
+    <string name="api_key">&apiKey;</string>
     <string name="location_url">https://apidev.accuweather.com/locations/v1/search?q=</string>
     <string name="weather_url">https://apidev.accuweather.com/currentconditions/v1/</string>
-    <string name="weather_url_tail">.json?language=en&amp;apikey=hoArfRosT1215</string>
-    <string name="api_key">&amp;apikey=hoArfRosT1215</string>
+    <string name="weather_url_tail">.json?language=en&apiKey;</string>
+    <string name="default_location">SW1A 2AA</string>
+    <string name="default_location_key">52734_PC</string>
+    <string name="char_encoding">UTF-8</string>
+    <!--end of Weather API-->
+
+    <string name="error_title">Oops! Sorry</string>
+    <string name="error_message">There was an error. Please try again</string>
+    <string name="error_btn_ok_text">OK</string>
 </resources>
+
+<!--
+    https://apidev.accuweather.com/locations/v1/search?q=sw1a%202aa&apikey=hoArfRosT1215
+    https://apidev.accuweather.com/currentconditions/v1/52734_PC.json?language=en&apikey=hoArfRosT1215
+-->
